--- a/YAHW/Pages/Settings/Directories.xaml
+++ b/YAHW/Pages/Settings/Directories.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YAHW.Pages.SettingsPage"
+﻿<UserControl x:Class="YAHW.Pages.Settings.Directories"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -12,14 +12,10 @@
              Providers:ResxLocalizationProvider.DefaultDictionary="Resources"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Style="{StaticResource ContentRoot}">
-        <mui:ModernTab Layout="List" SelectedSource="/Pages/Settings/Appearance.xaml">
-            <mui:ModernTab.Links>
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageAppearance}" Source="/Pages/Settings/Appearance.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageDirectories}" Source="/Pages/Settings/Directories.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageAbout}" Source="/Pages/Settings/About.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageLicense}" Source="/Pages/Settings/License.xaml" />
-            </mui:ModernTab.Links>
-        </mui:ModernTab>
-    </Grid>
+    <ScrollViewer>
+        <StackPanel MinWidth="200">
+            <TextBlock Text="{lex:Loc YAHW:Resources:DirectoriesPageTitle}" Style="{StaticResource Heading2}" />
+            <TextBlock Text="Content goes here" />
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
