--- a/YAHW/Pages/Settings/License.xaml
+++ b/YAHW/Pages/Settings/License.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="YAHW.Pages.SettingsPage"
+﻿<UserControl x:Class="YAHW.Pages.Settings.License"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:mui="http://firstfloorsoftware.com/ModernUI"
+             xmlns:local="clr-namespace:YAHW.Pages.Settings"
              xmlns:Engine="clr-namespace:WPFLocalizeExtension.Engine;assembly=WPFLocalizeExtension"
              xmlns:Providers="clr-namespace:WPFLocalizeExtension.Providers;assembly=WPFLocalizeExtension"
              xmlns:lex="clr-namespace:WPFLocalizeExtension.Extensions;assembly=WPFLocalizeExtension"
@@ -12,14 +12,10 @@
              Providers:ResxLocalizationProvider.DefaultDictionary="Resources"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid Style="{StaticResource ContentRoot}">
-        <mui:ModernTab Layout="List" SelectedSource="/Pages/Settings/Appearance.xaml">
-            <mui:ModernTab.Links>
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageAppearance}" Source="/Pages/Settings/Appearance.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageDirectories}" Source="/Pages/Settings/Directories.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageAbout}" Source="/Pages/Settings/About.xaml" />
-                <mui:Link DisplayName="{lex:Loc YAHW:Resources:SettingsPageLicense}" Source="/Pages/Settings/License.xaml" />
-            </mui:ModernTab.Links>
-        </mui:ModernTab>
-    </Grid>
+    <ScrollViewer>
+        <StackPanel MinWidth="200">
+            <TextBlock Text="{lex:Loc YAHW:Resources:SettingsPageLicense}" Style="{StaticResource Heading2}" />
+            <TextBlock Margin="0,5,0,0" Text="{lex:Loc YAHW:Resources:LicensePageLicense}" />
+        </StackPanel>
+    </ScrollViewer>
 </UserControl>
