--- a/YAHW/Styling/Styles/Chart.xaml
+++ b/YAHW/Styling/Styles/Chart.xaml
@@ -31,7 +31,7 @@
         <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="FontSize" Value="16" />
         <Setter Property="FontWeight" Value="Normal" />
-        <Setter Property="Foreground" Value="{StaticResource GrayBrush1}" />
+        <Setter Property="Foreground" Value="{DynamicResource GrayBrush1}" />
         <Setter Property="TextOptions.TextFormattingMode" Value="Ideal" />
     </Style>
 
