Added GPU support (scaffold) … Added GPU Workload

--- a/YAHW/MainWindow.xaml
+++ b/YAHW/MainWindow.xaml
@@ -46,6 +46,7 @@
         <mui:LinkGroup DisplayName="{lex:Loc YAHW:Resources:MainWindowGPU}">
             <mui:LinkGroup.Links>
                 <mui:Link DisplayName="{lex:Loc YAHW:Resources:MainWindowGPUInformation}" Source="/Pages/GPUInformation.xaml" />
+                <mui:Link DisplayName="{lex:Loc YAHW:Resources:MainWindowGPUCoreWorkload}" Source="/Pages/GPUCoreWorkloads.xaml" />
             </mui:LinkGroup.Links>
         </mui:LinkGroup>
         <!-- RAM -->
