--- a/YAHW/Pages/AutoRuns.xaml
+++ b/YAHW/Pages/AutoRuns.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="YAHW.Pages.Settings.License"
+﻿<UserControl x:Class="YAHW.Pages.AutoRuns"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:YAHW.Pages.Settings"
+             xmlns:mui="http://firstfloorsoftware.com/ModernUI"
              xmlns:Engine="clr-namespace:WPFLocalizeExtension.Engine;assembly=WPFLocalizeExtension"
              xmlns:Providers="clr-namespace:WPFLocalizeExtension.Providers;assembly=WPFLocalizeExtension"
              xmlns:lex="clr-namespace:WPFLocalizeExtension.Extensions;assembly=WPFLocalizeExtension"
@@ -12,11 +12,13 @@
              Providers:ResxLocalizationProvider.DefaultDictionary="Resources"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <ScrollViewer>
-        <StackPanel MinWidth="200">
-            <TextBlock Text="{lex:Loc YAHW:Resources:SettingsPageLicense}" Style="{StaticResource Heading2}" />
-            <TextBlock x:Name="txtLicense"
-                       Margin="0,5,0,0" />
-        </StackPanel>
-    </ScrollViewer>
+    <Grid Style="{StaticResource ContentRoot}">
+        <!-- TODO: set @SelectedSource -->
+        <mui:ModernTab Layout="List" SelectedSource="/Pages/AutoRunPages/AutoRunsLogon.xaml">
+            <mui:ModernTab.Links>
+                <!-- TODO: set @Source -->
+                <mui:Link DisplayName="{lex:Loc YAHW:Resources:AutoRunsLogon}" Source="/Pages/AutoRunPages/AutoRunsLogon.xaml" />
+            </mui:ModernTab.Links>
+        </mui:ModernTab>
+    </Grid>
 </UserControl>
